addthis js commented on all the pages

--- a/web/ci/css/test.html
+++ b/web/ci/css/test.html
@@ -197,7 +197,8 @@
          <!-- AddThis Button BEGIN -->             
 					<script type="text/javascript">var addthis_config = {"data_track_clickback":true, ui_click:true, ui_language: "fr"};</script>
 
-          <a style="float:right; margin-right:3px; margin-top:13px;" class="addthis_button" href="http://www.addthis.com/bookmark.php?v=250&amp;username=aubergescom"><img src="http://s7.addthis.com/static/btn/v2/lg-share-fr.gif" height="16" alt="Bookmark and Share" style="border:0"/></a><script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#username=aubergescom"></script>
+          <a style="float:right; margin-right:3px; margin-top:13px;" class="addthis_button" href="http://www.addthis.com/bookmark.php?v=250&amp;username=aubergescom"><img src="http://s7.addthis.com/static/btn/v2/lg-share-fr.gif" height="16" alt="Bookmark and Share" style="border:0"/></a>
+          <!--<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#username=aubergescom"></script> -->
           <!-- AddThis Button END --> 
           </li>
           <li class="flags-holder"><a class="flags-trigger" href="">Internationale</a>
