--- a/web/ci/css/test.html
+++ b/web/ci/css/test.html
@@ -934,13 +934,9 @@ Les habitants d’Amsterdam parlent le néerlandais, mais......<br /><a href="ht
 <div id="lf_div_invite" name="lf_div_invite" style="display:none;position:absolute;left:0px;top:0px;width:0px;height:0px;">
 <iframe name="lf_iframe_invite" id="lf_iframe_invite" frameborder="0" src="about:blank" 
 style="width:100%;height:100%;border:none;" allowtransparency="true" scrolling="no"></iframe></div>
+<?php if($this->config->item('displayVelaro') == 1) {  ?>
 <!-- Velaro Weblink Code -->
 <script>
-var displayVelaro='<?php echo $this->config->item('displayVelaro'); ?>';	
-
-if(displayVelaro ==1)
-{
-	
 var vnt='yes'
 var vrt='no';
 var vt=1;
@@ -971,8 +967,9 @@ sm=sm+'&la='+escape(la)+'&pl='+escape(navigator.platform)+'&pal='+screen.colorDe
 sm=sm+ pn+'&je='+navigator.javaEnabled()+'&origin=';
 sm=sm+rm+'&pa='+pm;
 document.write('<script src="'+sm+'"></scr'+'ipt>');
-}
 </script>
+
+<?php } ?>
 
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
